--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,9 @@
 <h1>Home</h1>
 <p> <%= startingContent %> </p>
 
-
-<% for(let i=0;i<posts.length;i++){ %> 
-    <% console.log(posts[i].title); %>
-<%} %> 
+<% posts.forEach(function(post){ %> 
+    <h1><%= post.title %> </h1>
+    <p> <%= post.body %> </p>    
+    <% }); %> 
 
 <%- include("partials/footer"); -%> 
